kiki/src/examples/should_fail/clash_terminal_terminal_enum_name.kiki
start Foo

struct Foo

terminal Tok {
    $Tok: bool
}
